@@ -17,6 +17,8 @@ IN: unix-internals
 : SOL_SOCKET HEX: ffff ;
 : SO_REUSEADDR HEX: 4 ;
 : SO_OOBINLINE HEX: 100 ;
+: SO_SNDTIMEO HEX: 1005 ;
+: SO_RCVTIMEO HEX: 1006 ;
 
 : INADDR_ANY 0 ;
 
