@@ -2,30 +2,12 @@
 
 CELL to_cell(CELL x)
 {
-	F_FIXNUM fixnum;
-	F_ARRAY* bignum;
-
 	switch(type_of(x))
 	{
 	case FIXNUM_TYPE:
-		fixnum = untag_fixnum_fast(x);
-		if(fixnum < 0)
-		{
-			range_error(F,0,tag_fixnum(fixnum),FIXNUM_MAX);
-			return -1;
-		}
-		else
-			return (CELL)fixnum;
-		break;
+		return untag_fixnum_fast(x);
 	case BIGNUM_TYPE:
-		bignum = to_bignum(x);
-		if(BIGNUM_NEGATIVE_P(bignum))
-		{
-			range_error(F,0,tag_bignum(bignum),FIXNUM_MAX);
-			return -1;
-		}
-		else
-			return s48_bignum_to_long(untag_bignum_fast(x));
+		return s48_bignum_to_long(untag_bignum_fast(x));
 	default:
 		type_error(BIGNUM_TYPE,x);
 		return 0;
